fix jumping header

--- a/src/App.css
+++ b/src/App.css
@@ -71,18 +71,18 @@ li a {
 	}
 
 	.body {
-		height: auto;
+		grid-template-columns: 8vh 1fr;
 		margin: 5px 0;
 	}
 
 	.header {
 		text-align: center;
-		margin: auto 0px;
+		margin: auto;
 	}
 
 	h1 {
 		padding: 0px;
-		margin: auto;
+		margin: auto 0;
 		font-size: 15px;
 	}
 }
